# kirkbot

./: .gitignore  README.md  pyproject.toml  start.sh
.github/workflows/: pytest.yml
kirkbot/: cli.py  client.py  constants.py  tasks.py
tests/: test_noop.py  test_tasks.py
